--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,39 @@
 name: CI
+
+on:
+  push:
+    branches: [ main, ci/**, feature/** ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  test:
+    name: Julia ${{ matrix.version }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        version: ['1.10', '1.11']
+    steps:
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v2
+        with:
+          version: ${{ matrix.version }}
+      - name: Cache artifacts
+        uses: actions/cache@v4
+        with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-julia-${{ matrix.version }}-artifacts-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-julia-${{ matrix.version }}-artifacts-
+      - name: Instantiate
+        run: julia --color=yes --project -e "using Pkg; Pkg.instantiate()"
+      - name: Run tests
+        env:
+          JULIA_NUM_THREADS: 2
+        run: julia --check-bounds=yes --color=yes --project -e "using Pkg; Pkg.test(coverage=true)"
+name: CI
 on:
   push:
     branches: [master, main]
