--- a/test/Project.toml
+++ b/test/Project.toml
@@ -5,5 +5,6 @@ JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
-GraphsInterfaceChecker = "6d97c34b-a87b-4394-aa16-5ee6d0ecc4b1"
+# Correct UUID from General registry
+GraphsInterfaceChecker = "3bef136c-15ff-4091-acbb-1a4aafe67608"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
