--- a/Project.toml
+++ b/Project.toml
@@ -7,10 +7,15 @@ version = "0.1.0"
 CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LEMON_jll = "9f9b04fa-cfb6-5331-975f-45512019a816"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 CxxWrap = "0.17.1"
 Graphs = "1.12.0"
 LEMON_jll = "1.3.1"
 julia = "1.10"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
