--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,7 +1,9 @@
 [deps]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+GraphsInterfaceChecker = "3bef136c-15ff-4091-acbb-1a4aafe67608"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
+LEMONGraphs = "14b1564f-c77f-4800-9e89-efd961faef7c"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
